1.4
  - fix markdown bugs (*em*, _em_)
1.3
  - add README.md support
  - add submodule support
  - add Smart HTTP and basic authentication support
  - add Markdown format in normal file
1.2
  - add blame page
  - add blanch import feature
1.1
  - add import_rep script to import repositories.
1.0
  - first major release